// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangeOtherListModal > renders appropriate instructions when copy and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to copy items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="tw:mb-3"
      >
        <div
          class="tw:w-full"
        >
          <label
            class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)] tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:cursor-pointer"
            type="submit"
          >
            Complete
          </button>
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:text-[var(--color-text-secondary)] tw:hover:bg-[var(--color-surface-overlay)] tw:active:bg-[var(--color-surface-raised)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:cursor-pointer"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when move and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to move items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="tw:mb-3"
      >
        <div
          class="tw:w-full"
        >
          <label
            class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)] tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:cursor-pointer"
            type="submit"
          >
            Complete
          </button>
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:text-[var(--color-text-secondary)] tw:hover:bg-[var(--color-surface-overlay)] tw:active:bg-[var(--color-surface-raised)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:cursor-pointer"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when no lists 1`] = `
<div
  class="modal-header"
>
  You do not have any other lists with the same configuration. Please create a new list to take this action.
  <button
    aria-label="Close"
    class="btn-close"
    type="button"
  />
</div>
`;
